# products-manager

./: Makefile  README.md  docker-compose.test.yaml  docker-compose.yaml
calculator-service/: Dockerfile  go.mod  go.sum  main.go
calculator-service/calculator/: calculator.go  calculator_test.go  product.go  repo.go  user.go
calculator-service/calculator/protos/: calculator.proto
calculator-service/config/: app.go
calculator-service/models/: product.go  user.go
calculator-service/protos/: calculator.proto
calculator-service/protos/calculator/: calculator.pb.go
calculator-service/server/: calculator.go
calculator-service/servers/: calculator.go
initial-db-data/: tables.sql
products-api/: Dockerfile  pyproject.toml  pytest.ini
products-api/products_api/: clients.py  configs.py  db.py  main.py  managers.py  models.py  views.py
products-api/products_api/protos/calculator/: calculator_pb2.py  calculator_pb2_grpc.py
products-api/tests/: conftest.py  test_clients.py  test_managers.py  test_models.py  test_views.py
