[tool.poetry]
name = "products-api"
version = "0.1.0"
description = "Simple HTTP API for list products"
authors = ["Guilherme Munarolo <guimunarolo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
requests = "^2.24.0"
databases = {extras = ["sqlite"], version = "^0.3.2"}
prettyconf = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-deadfixtures = "^2.2.1"
pytest-randomly = "^3.4.1"
codecov = "^2.1.10"
pytest-env = "^0.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
