[tool.poetry]
name = "products-api"
version = "0.1.0"
description = "Simple HTTP API for list products"
authors = ["Guilherme Munarolo <guimunarolo@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.1"
requests = "^2.24.0"
databases = {extras = ["postgresql"], version = "^0.3.2"}
prettyconf = "^2.1.0"
grpcio = "^1.32.0"
grpcio-tools = "^1.32.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
pytest-deadfixtures = "^2.2.1"
pytest-randomly = "^3.4.1"
codecov = "^2.1.10"
pytest-asyncio = "^0.14.0"
httpx = "^0.16.1"
grpcio-tools = "^1.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
